# eink-charts

./: .gitignore  .gitmodules  LICENSE  README.md
.github/workflows/: deploy-worker.yml
bridge/: README.md  pyproject.toml
bridge-cloud/: README.md  pyproject.toml
bridge-cloud/deploy/: grafana-push.env.example  grafana-push.service  grafana-push.timer  install.sh
bridge-cloud/src/grafana_push/: __main__.py  data.py  push.py  scheduler.py
bridge-cloud/tests/: test_push.py
bridge/deploy/: config.yaml.example  grafana-bridge.env.example  grafana-bridge.service  install.sh
bridge/src/grafana_bridge/: __main__.py  app.py  config.py  render.py
bridge/tests/: test_render.py
firmware/: README.md  platformio.ini
firmware-cloud/: README.md  partitions.csv  platformio.ini  platformio.local.ini.example
firmware-cloud/src/: ble_bundle_receiver.cpp  ble_bundle_receiver.h  bundle_seal.cpp  bundle_seal.h  config.h  enroll_screen.cpp  enroll_screen.h  gfx_lite.cpp  gfx_lite.h  imu.cpp  log_buffer.cpp  log_buffer.h  main.cpp  panel_model.h  panel_renderer.cpp  wifi_config.cpp  wifi_config.h  x25519_keystore.cpp  x25519_keystore.h
firmware/src/: config.h  demo_panel_data.h  gfx_lite.cpp  imu.h  main.cpp  panel_model.h  panel_renderer.cpp
ios-app/: README.md
ios-app/EInkCharts/: BLECoordinator.swift  BundleFetcher.swift  Config.template.swift  ContentView.swift  EInkChartsApp.swift  Info.plist
worker/: README.md  wrangler.toml
worker/src/: index.js
