[project]
name = "grafana-push"
version = "0.1.0"
description = "Push X25519-sealed Grafana dashboard bundles to a public Cloudflare Worker (X3 fetches from there over any network)"
requires-python = ">=3.11"
dependencies = [
    # Shared with bridge/: keeps the data + scheduler code path the same.
    "httpx>=0.27",
    "pillow>=10.4",
    "pyyaml>=6.0",
    # Push-specific: X25519 + AES-256-GCM via cryptography.hazmat.
    "cryptography>=43.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
grafana-push = "grafana_push.push:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/grafana_push"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
